Fix overflow of app bar

--- a/LANCommander.Client/Styles/_split-pane.scss
+++ b/LANCommander.Client/Styles/_split-pane.scss
@@ -4,6 +4,7 @@
 
     .pane {
         overflow-x: scroll;
+        position: relative;
 
         &:hover::-webkit-scrollbar {
             opacity: 1;
